@@ -1,3 +1,10 @@
+2005-08-20  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Headers/cairo/CairoFaceInfo.h (-fontFace): Use
+	_cairo_toy_font_face_create, as Cairo did rename this function.
+	* Headers/cairo/CairoFontInfo.h (_cairo_glyph_for_NSGlyph): Use
+	Cairo function _cairo_scaled_font_text_to_glyphs to convert to glyphs.
+
 2005-08-16  Adrian Robert <arobert@cogsci.ucsd.edu>
 
 	* Source/art/ftfont.m (-[FTFontInfo drawString:...]):
